--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
+/* Header y nav */
 header {
     background-color: #1F2937;
 }
@@ -12,18 +16,68 @@ header, ul {
     justify-content: space-between;
 }
 
-.logo, .nav {
-    margin: 10px ;
-}
-
 .logo {
     color: #F9FAF8;
     font-size: 24px;
+    margin: 5px 0 0 5px;
 }
 
 .nav > li {
-    margin: 0 5px;
+    margin: 0 10px;
     list-style: none;
     color: #E5E7EB;
     font-size: 18px;
+    margin: 10px 15px 0 0;
+}
+
+/* Seccion Top */
+#top {
+    background-color: #1F2937;
+    padding: 0 50px;
+    height: 96vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10%;
+}
+
+.top-izq {
+    margin-left: 5%;
+    padding: 25px;
+    width: 500px;
+}
+
+.hades {
+    width: 500px;
+    margin-right: 5%;
+    border-radius: 10px;
+}
+
+.title {
+    color: #f9faf8;
+    margin: 5px;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.secondary {
+    color: #E5E7EB;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.sign {
+    background-color: #3882f6;
+    color: #F9FAF8;
+    margin: 10px 0;
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    transition: all 0.4s;
+    cursor: pointer;
+}
+
+.sign:hover {
+    box-shadow: 1px 1px 2px #000000;
+    transform: translateY(-5px);
 }
