--- a/style.css
+++ b/style.css
@@ -81,3 +81,24 @@ header, ul {
     box-shadow: 1px 1px 2px #000000;
     transform: translateY(-5px);
 }
+
+#middle-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    text-align: center;
+    max-width: 250px;
+    padding: 10px;
+    margin: 100px 50px;
+}
+
+.card > img {
+    display: block;
+    margin: auto;
+    width: 100px;
+    border: 3px solid #3882f6;
+    border-radius: 10px;
+}
