--- a/style.css
+++ b/style.css
@@ -30,6 +30,19 @@ header, ul {
     margin: 10px 15px 0 0;
 }
 
+li > a {
+    color: #E5E7EB;
+    text-decoration: none;
+}
+
+li > a:active{
+    text-decoration: underline;
+}
+
+li > a:hover {
+    color: #3882f6;
+}
+
 /* Seccion Top */
 #top {
     background-color: #1F2937;
@@ -81,6 +94,11 @@ header, ul {
     box-shadow: 1px 1px 2px #000000;
     transform: translateY(-5px);
 }
+/* Sección middle-top*/
+.info {
+    text-align: center;
+    margin-top: 35px;
+}
 
 #middle-top {
     display: flex;
@@ -92,7 +110,7 @@ header, ul {
     text-align: center;
     max-width: 250px;
     padding: 10px;
-    margin: 100px 50px;
+    margin: 75px 50px;
 }
 
 .card > img {
