--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html {
+    scroll-behavior:smooth;
+}
+
 /* Header y nav */
 header {
     background-color: #1F2937;
@@ -143,4 +147,57 @@ q {
     margin-top: 30px;
     align-self: flex-end;
     font-weight: bold;
+}
+
+/* Call to Action Section */
+#bottom {
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.call {
+    background-color: #3882f6;
+    margin: 50px;
+    padding: 50px 100px;
+    border-radius: 5px;
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+}
+
+.call > .text {
+    color: #f9faf8;
+    margin: 5px;
+}
+
+.call > button {
+    background-color: #3882f6;
+    border: 3px solid #f9faf8;
+    border-radius: 10px;
+    padding: 10px 15px;
+    color: #F9FAF8;
+    font-size: 18px;
+    transition: all 0.4s;
+    cursor: pointer;
+}
+
+.call > button:hover {
+    background-color: #F9FAF8;
+    color: #3882f6;
+    transform: translateY(-5px);
+}
+
+/* Footer */
+footer {
+    background-color: #1F2937;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer > p {
+    color: #F9FAF8;
 }
