--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ header, ul {
 }
 
 .logo {
-    color: #F9FAF8;
-    font-size: 24px;
+    width: 50px;
+    border-radius: 50%;
     margin: 5px 0 0 5px;
 }
 
